--- a/index.html
+++ b/index.html
@@ -200,6 +200,172 @@ var testimonialSwiper = new Swiper(".testimonialSwiper", {
 </script>
 
 </body>
+</html>.hero-overlay p{font-size:1.3rem;margin-bottom:25px}
+.hero-buttons{display:flex;justify-content:center;gap:15px;flex-wrap:wrap}
+.hero-buttons button{
+  padding:12px 25px;border:none;border-radius:6px;font-weight:600;cursor:pointer;margin:5px;transition:0.3s
+}
+.btn-primary{background:#00A859;color:#fff}
+.btn-primary:hover{background:#007f45}
+.btn-secondary{background:#fff;color:#00A859;border:2px solid #00A859}
+.btn-secondary:hover{background:#00A859;color:#fff}
+.swiper-pagination{bottom:15px !important}
+
+/* ABOUT, SERVICES, SUSTAINABILITY, CAREER */
+.grid-3,.grid-4{display:grid;gap:30px}
+.grid-3{grid-template-columns:repeat(auto-fit,minmax(250px,1fr))}
+.grid-4{grid-template-columns:repeat(auto-fit,minmax(220px,1fr))}
+.card{background:#1e293b;padding:25px;border-radius:12px;transition:0.3s}
+.card:hover{transform:translateY(-5px)}
+
+/* TESTIMONIALS SLIDER */
+.testimonial{background:#1e293b;padding:20px;border-radius:10px;font-size:0.95rem;transition:0.3s}
+.testimonial h4{color:#00A859;margin-bottom:5px}
+.testimonial p{font-size:0.9rem}
+.testimonial:hover{transform:translateY(-3px)}
+
+/* CONTACT */
+.contact p, .contact h2{margin:10px 0}
+
+/* WHATSAPP */
+.whatsapp{position:fixed;bottom:20px;right:20px;background:#25D366;color:#fff;padding:15px 18px;border-radius:50%;font-size:22px;text-decoration:none;z-index:1000}
+
+/* MOBILE RESPONSIVE */
+@media(max-width:768px){
+  nav .logo img{max-height:40px}
+  .hero-overlay h1{font-size:2rem}
+  .hero-overlay p{font-size:1rem}
+  .hero-buttons{flex-direction:column;gap:10px}
+  .hero-buttons button{width:100%;max-width:300px}
+  section{padding:70px 15px}
+  nav ul{display:none;flex-direction:column;gap:10px;background:rgba(0,0,0,0.95);position:absolute;top:60px;right:0;width:200px;padding:20px;border-radius:0 0 0 8px}
+  .hamburger{display:flex}
+}
+html{scroll-behavior:smooth}
+</style>
+</head>
+<body>
+
+<!-- NAVIGATION -->
+<nav>
+  <div class="logo">
+    <img src="assets/images/logo.png" alt="Voltura EcoEnergy Logo">
+  </div>
+  <ul>
+    <li><a href="#about">About</a></li>
+    <li><a href="#services">Services</a></li>
+    <li><a href="#sustainability">Sustainability</a></li>
+    <li><a href="#career">Career</a></li>
+    <li><a href="#testimonials">Testimonials</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+  <div class="hamburger">
+    <div></div><div></div><div></div>
+  </div>
+</nav>
+
+<!-- HERO SECTION -->
+<section class="hero" id="home">
+  <div class="swiper heroSwiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><video autoplay muted loop playsinline src="assets/videos/hero-solar-hologram.mp4"></video></div>
+      <div class="swiper-slide"><video autoplay muted loop playsinline src="assets/videos/hero-solar-panels.mp4"></video></div>
+      <div class="swiper-slide"><video autoplay muted loop playsinline src="assets/videos/hero-smart-home.mp4"></video></div>
+    </div>
+    <div class="swiper-pagination"></div>
+  </div>
+
+  <div class="hero-overlay">
+    <h1>Voltura EcoEnergy</h1>
+    <p>Clean, reliable, and innovative energy solutions nationwide</p>
+    <div class="hero-buttons">
+      <a href="https://wa.me/2347065024570"><button class="btn-primary">Get Consultation</button></a>
+      <a href="#career"><button class="btn-secondary">Join Our Team</button></a>
+    </div>
+  </div>
+</section>
+
+<!-- ABOUT SECTION -->
+<section id="about">
+  <h2>About Voltura EcoEnergy</h2>
+  <p>Voltura EcoEnergy delivers comprehensive energy solutions across Nigeria, including solar installations, home automation, electrical wiring, and buying & selling of solar products. We operate nationwide with offices in Benin City, Warri, and Lagos, ensuring professional service wherever you are. Our mission is to empower homes and businesses with clean, reliable, and innovative energy while driving sustainable development.</p>
+</section>
+
+<!-- SERVICES SECTION -->
+<section id="services">
+  <h2>Our Services</h2>
+  <div class="grid-3">
+    <div class="card">Solar Panel Installation</div>
+    <div class="card">Home Automation Systems</div>
+    <div class="card">Electrical Wiring & Installations</div>
+    <div class="card">Inverter & Battery Solutions</div>
+    <div class="card">Buying & Selling Used Solar Products</div>
+    <div class="card">Security Cameras & Automation</div>
+  </div>
+</section>
+
+<!-- SUSTAINABILITY SECTION -->
+<section id="sustainability">
+  <h2>Sustainability & Innovation</h2>
+  <p>Upgrading to solar reduces reliance on diesel generators, lowers energy costs for businesses, and helps protect the environment. Voltura EcoEnergy contributes to a cleaner climate and a sustainable future by providing efficient solar systems tailored for both homes and enterprises. Our solutions help clients save on energy while reducing carbon emissions, actively supporting a healthier planet.</p>
+</section>
+
+<!-- CAREERS SECTION -->
+<section id="career">
+  <h2>Careers at Voltura EcoEnergy</h2>
+  <p>We train engineers and employ professionals in energy solutions. Join our team to grow your career, and benefit from our referral bonuses when you refer skilled professionals. Our work culture encourages innovation, learning, and excellence.</p>
+</section>
+
+<!-- TESTIMONIALS SECTION -->
+<section id="testimonials">
+  <h2>What Our Clients Say</h2>
+  <div class="swiper testimonialSwiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide testimonial"><h4>John Doe</h4><p>Excellent solar installation with timely delivery and great customer service.</p></div>
+      <div class="swiper-slide testimonial"><h4>Jane Smith</h4><p>Voltura team is professional, reliable, and their products are top-notch.</p></div>
+      <div class="swiper-slide testimonial"><h4>Michael A.</h4><p>Fast service, helpful support, and clean installations throughout.</p></div>
+      <div class="swiper-slide testimonial"><h4>Sarah K.</h4><p>High-quality inverters and batteries. Very satisfied with the setup.</p></div>
+      <div class="swiper-slide testimonial"><h4>Chris L.</h4><p>Efficient project delivery and excellent client interaction.</p></div>
+      <div class="swiper-slide testimonial"><h4>Linda P.</h4><p>Customer-focused team, professional advice, and smooth installation.</p></div>
+      <div class="swiper-slide testimonial"><h4>David O.</h4><p>Reliable and innovative solutions, highly recommended.</p></div>
+      <div class="swiper-slide testimonial"><h4>Mary A.</h4><p>Friendly staff, quick service, and excellent after-sales support.</p></div>
+      <div class="swiper-slide testimonial"><h4>Paul B.</h4><p>Solar systems were installed flawlessly with clear guidance.</p></div>
+      <div class="swiper-slide testimonial"><h4>Sophia M.</h4><p>Professional, efficient, and supportive throughout the project.</p></div>
+    </div>
+    <div class="swiper-pagination"></div>
+  </div>
+</section>
+
+<!-- CONTACT SECTION -->
+<section id="contact">
+  <h2>Contact Us</h2>
+  <p>Email: Volturaeco@gmail.com</p>
+  <p>Benin City: Saint Saviour Road, Edo State</p>
+  <p>Warri: Agbarho, Delta State</p>
+  <p>Lagos: Egbeda, Lagos State</p>
+</section>
+
+<!-- WhatsApp Button -->
+<a href="https://wa.me/2347065024570" class="whatsapp" target="_blank">💬</a>
+
+<!-- SWIPER JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+<script>
+var heroSwiper = new Swiper(".heroSwiper", {
+  loop:true,
+  autoplay:{delay:8000,disableOnInteraction:false},
+  effect:"fade",
+  pagination:{el:".swiper-pagination",clickable:true},
+});
+var testimonialSwiper = new Swiper(".testimonialSwiper", {
+  loop:true,
+  autoplay:{delay:7000,disableOnInteraction:false},
+  slidesPerView:1,
+  pagination:{el:".swiper-pagination",clickable:true},
+});
+</script>
+
+</body>
 </html>  text-align:center;color:#fff;font-weight:bold;text-shadow:2px 2px 10px rgba(0,0,0,0.7);
   max-width:90%;padding:0 20px;z-index:2;
 }
