--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ nav ul li a:hover { color: #00A859; }
 
 <!-- NAVIGATION -->
 <nav>
-  <div class="logo"><img src="assets/images/logo.png" alt="Voltura EcoEnergy"></div>
+  <div class="logo"><img src="logo.png" alt="Voltura EcoEnergy"></div>
   <ul id="nav-links">
     <li><a href="#about">About</a></li>
     <li><a href="#services">Services</a></li>
