--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@ nav ul li a:hover { color: #00A859; }
 <section class="hero" id="home">
   <div class="swiper heroSwiper">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><video autoplay muted loop playsinline src="assets/videos/hero-solar-hologram.mp4"></video></div>
-      <div class="swiper-slide"><video autoplay muted loop playsinline src="assets/videos/hero-solar-panels.mp4"></video></div>
-      <div class="swiper-slide"><video autoplay muted loop playsinline src="assets/videos/hero-smart-home.mp4"></video></div>
+      <div class="swiper-slide"><video autoplay muted loop playsinline src="hero-solar-hologram.mp4"></video></div>
+      <div class="swiper-slide"><video autoplay muted loop playsinline src="hero-solar-panels.mp4"></video></div>
+      <div class="swiper-slide"><video autoplay muted loop playsinline src="hero-smart-home.mp4"></video></div>
     </div>
     <div class="swiper-pagination"></div>
   </div>
