--- a/index.html
+++ b/index.html
@@ -32,8 +32,39 @@ nav ul li a:hover { color: #00A859; }
 .hamburger div { width: 25px; height: 3px; background: #fff; }
 
 /* HERO SECTION */
+  
+  /* Make Swiper full height */
+.hero .swiper,
+.hero .swiper-wrapper,
+.hero .swiper-slide {
+  height: 100%;
+}
+
+/* Dark cinematic overlay */
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+/* Make sure overlay text stays above dark layer */
+.hero-overlay {
+  z-index: 2;
+}
 .hero { height: 100vh; position: relative; overflow: hidden; }
-.hero video { width: 100%; height: 100%; object-fit: cover; }
+.hero video { 
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
+}
 .hero-overlay {
   position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
   text-align: center; color: #fff; font-weight: bold; text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
