--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@ nav ul li a:hover { color: #00A859; }
 .hero-overlay {
   z-index: 2;
 }
-.hero { height: 100vh; position: relative; overflow: hidden; }
-.hero video { 
+.hero { min-height: 100vh; position: relative; }.hero video { 
   position: absolute;
   top: 0;
   left: 0;
@@ -142,7 +141,7 @@ nav ul li a:hover { color: #00A859; }
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <video autoplay muted loop playsinline>
-          <source src="hero-solar-hologram.mp4" type="video/mp4">
+          <sour"hero type="video/mp4">
         </video>
       </div>
       <div class="swiper-slide">
