--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@ nav ul li a:hover { color: #00A859; }
   <div class="swiper heroSwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <video autoplay muted loop playsinline>
-          <sour"hero type="video/mp4">
-        </video>
-      </div>
+  <video autoplay muted loop playsinline>
+    <source src="hero-solar-hologram.mp4" type="video/mp4">
+  </video>
+</div>
       <div class="swiper-slide">
         <video autoplay muted loop playsinline>
           <source src="hero-solar-panels.mp4" type="video/mp4">
