--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@ nav ul li a:hover { color: #00A859; }
       </div>
       <div class="swiper-slide">
         <video autoplay muted loop playsinline>
-          <source src="hero-solar-panels.mp4" type="video/mp4">
+          <video src="hero-solar-panels.mp4" type="video/mp4">
         </video>
       </div>
       <div class="swiper-slide">
         <video autoplay muted loop playsinline>
-          <source src="hero-smart-home.mp4" type="video/mp4">
+          <video src="hero-smart-home.mp4" type="video/mp4">
         </video>
       </div>
     </div>
