--- a/index.html
+++ b/index.html
@@ -148,16 +148,8 @@ nav ul li a:hover { color: #00A859; }
           <source src="hero-solar-hologram.mp4" type="video/mp4">
         </video>
       </div>
-      <div class="swiper-slide">
-        <video autoplay muted loop playsinline>
-          <video src="hero-solar-panels.mp4" type="video/mp4">
-        </video>
-      </div>
-      <div class="swiper-slide">
-        <video autoplay muted loop playsinline>
-          <video src="hero-smart-home.mp4" type="video/mp4">
-        </video>
-      </div>
+      <div class="swiper-slide"><video autoplay muted loop playsinline src="videos/hero-solar-panels.mp4"></video></div>
+      <div class="swiper-slide"><video autoplay muted loop playsinline src="videos/hero-smart-home.mp4"></video></div>
     </div>
   </div>
 
