Add hero section with video slides to index.html

--- a/index.html
+++ b/index.html
@@ -140,20 +140,34 @@ nav ul li a:hover { color: #00A859; }
   </div>
 </nav>
 
+<!-- HERO SECTION -->
 <section class="hero" id="home">
   <div class="swiper heroSwiper">
     <div class="swiper-wrapper">
+      <!-- Slide 1 -->
       <div class="swiper-slide">
         <video autoplay muted loop playsinline>
           <source src="hero-solar-hologram.mp4" type="video/mp4">
         </video>
       </div>
-      <div class="swiper-slide"><video autoplay muted loop playsinline src="hero-solar-panels.mp4"></video></div>
-      <div class="swiper-slide"><video autoplay muted loop playsinline src="hero-smart-home.mp4"></video></div>
+      <!-- Slide 2 -->
+      <div class="swiper-slide">
+        <video autoplay muted loop playsinline>
+          <source src="hero-solar-panels.mp4" type="video/mp4">
+        </video>
+      </div>
+      <!-- Slide 3 -->
+      <div class="swiper-slide">
+        <video autoplay muted loop playsinline>
+          <source src="hero-smart-home.mp4" type="video/mp4">
+        </video>
+      </div>
     </div>
+    <!-- Pagination Dots -->
+    <div class="swiper-pagination"></div>
   </div>
 
-  <!-- Overlay -->
+  <!-- Overlay Text -->
   <div class="hero-overlay">
     <h1>Voltura EcoEnergy</h1>
     <p>Clean, reliable, and innovative energy solutions nationwide</p>
