--- a/index.html
+++ b/index.html
@@ -132,13 +132,10 @@ nav ul li a:hover { color: #00A859; }
 
 <!-- HERO SECTION -->
 <section class="hero" id="home">
+<section class="hero" id="home">
   <div class="swiper heroSwiper">
     <div class="swiper-wrapper">
-      <div class="swiper-slide">
-        <video autoplay muted loop playsinline>
-          <source src="hero-solar-hologram.mp4" type="video/mp4">
-        </video>
-      </div>
+      
       <div class="swiper-slide">
         <video autoplay muted loop playsinline>
           <source src="hero-solar-panels.mp4" type="video/mp4">
@@ -150,6 +147,7 @@ nav ul li a:hover { color: #00A859; }
         </video>
       </div>
     </div>
+  </div>
     <div class="swiper-pagination"></div>
   </div>
   <div class="hero-overlay">
